@@ -179,11 +179,13 @@ Calculator::Calculator() {
 	srand(time(NULL));
 
 	exchange_rates_time[0] = 0;
-	exchange_rates_time[1] = 0;
+	exchange_rates_time[1] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_time[2] = 0;
+	priv->exchange_rates_time2[0] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_check_time[0] = 0;
-	exchange_rates_check_time[1] = 0;
+	exchange_rates_check_time[1] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_check_time[2] = 0;
+	priv->exchange_rates_check_time2[0] = (time_t) 438383L * (time_t) 3600;
 	b_exchange_rates_warning_enabled = true;
 	b_exchange_rates_used = 0;
 
@@ -405,11 +407,13 @@ Calculator::Calculator(bool ignore_locale) {
 	srand(time(NULL));
 
 	exchange_rates_time[0] = 0;
-	exchange_rates_time[1] = 0;
+	exchange_rates_time[1] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_time[2] = 0;
+	priv->exchange_rates_time2[0] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_check_time[0] = 0;
-	exchange_rates_check_time[1] = 0;
+	exchange_rates_check_time[1] = (time_t) 438383L * (time_t) 3600;
 	exchange_rates_check_time[2] = 0;
+	priv->exchange_rates_check_time2[0] = (time_t) 438383L * (time_t) 3600;
 	b_exchange_rates_warning_enabled = true;
 	b_exchange_rates_used = 0;
 
@@ -1688,10 +1692,14 @@ void Calculator::addBuiltinFunctions() {
 }
 void Calculator::addBuiltinUnits() {
 	u_euro = addUnit(new Unit(_("Currency"), "EUR", "euros", "euro", "European Euros", false, true, true));
-	u_btc = addUnit(new AliasUnit(_("Currency"), "BTC", "bitcoins", "bitcoin", "Bitcoins", u_euro, "6512.84", 1, "", false, true, true));
+	u_btc = addUnit(new AliasUnit(_("Currency"), "BTC", "bitcoins", "bitcoin", "Bitcoins", u_euro, "6636.72", 1, "", false, true, true));
 	u_btc->setApproximate();
 	u_btc->setPrecision(-2);
 	u_btc->setChanged(false);
+	priv->u_byn = addUnit(new AliasUnit(_("Currency"), "BYN", "", "", "Belarusian Ruble", u_euro, "2.23568", 1, "", false, true, true));
+	priv->u_byn->setApproximate();
+	priv->u_byn->setPrecision(-2);
+	priv->u_byn->setChanged(false);
 	u_second = NULL;
 	u_minute = NULL;
 	u_hour = NULL;
@@ -2166,6 +2174,7 @@ Unit* Calculator::getUnit(string name_) {
 Unit* Calculator::getUnitById(int id) const {
 	switch(id) {
 		case UNIT_ID_EURO: {return u_euro;}
+		case UNIT_ID_BYN: {return priv->u_byn;}
 		case UNIT_ID_BTC: {return u_btc;}
 		case UNIT_ID_SECOND: {return u_second;}
 		case UNIT_ID_MINUTE: {return u_minute;}
